syntax = "proto3";

package mygrpc;
option java_package = "com.watermelon.grpc";
option java_outer_classname = "GetTableNumberServiceProto";
option java_multiple_files = true;

service TableNumberService{
  rpc getTableNumber(GetTableNumberRequest) returns (GetTableNumberResponse){}
}

message GetTableNumberRequest{
  string commodityId = 1;
  int32 tableCount = 2;
}

message GetTableNumberResponse{
  int32 tableNumber = 1;
}